--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css" />
+    <title>William Evieux</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <meta name="description" content="I'm a fullstack software & web developper, and this is my portfolio.">
+    <meta property="og:type" content="website" />
 </head>
 
 <body id="app">
